Bijayini | inactive program alignment issue in dashboard

--- a/ui/app/styles/clinical/_programDisplayControl.scss
+++ b/ui/app/styles/clinical/_programDisplayControl.scss
@@ -38,6 +38,7 @@
       }
       .program-attribute-value{
           text-align: left;
+          padding-left: 10px;
       }
       &:last-child{
         padding-bottom: 0;
